--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,7 +22,7 @@ jobs:
 
       - name: Build
         env:
-          BASE_PATH: '/personal-website'
+          BASE_PATH: '/'
         run: npm run build
 
       - name: Upload Artifacts
