Disable Jekyll and fix GitHub Pages configuration
- Add .nojekyll file to root directory
- Fix BASE_PATH in GitHub Actions workflow
- Ensure Jekyll processing is completely disabled

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,7 +22,7 @@ jobs:
 
       - name: Build
         env:
-          BASE_PATH: '/'
+          BASE_PATH: '/personal-website'
         run: npm run build
 
       - name: Upload Artifacts
